--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,34 @@
-site_name: Lectron Documentation
+site_name: Edge Compute Docs
+site_description: Jetson & Raspberry Pi engineering documentation
+site_url: ""
+repo_url: ""
+repo_name: ""
+
+nav:
+  - Home: index.md
+  - Raspberry Pi Board: md/raspberry/index.md
+  - Jetson Board: md/jetson/index.md
+
 theme:
-  name: material #readthedocs
-  language: en #tr                     
+  name: material
+  language: en
+  custom_dir: docs/overrides
+  # features:
+  #   - navigation.tabs.sticky       # sekmeler sabit kalsın
+  #   - navigation.sections          # sidebar bölümleri
+  #   - navigation.top               # yukarı çık butonu
+  #   - navigation.tracking
+  #   - content.code.copy            # code-block copy
+  #   - content.code.annotate
+  #   - search.suggest
+  #   - search.highlight
+  #   - navigation.tabs
+  #   - navigation.expand       
+  #   - navigation.instant
+  #   - toc.integrate
+  #   - content.tabs.linked     
+  #   - header.autohide         
+  #   - announce.dismiss   
   features:
     - navigation.tabs
     - navigation.expand       
@@ -10,44 +37,52 @@ theme:
     - toc.integrate
     - content.tabs.linked     
     - header.autohide         
-    - announce.dismiss   
-  font:
-    text: Roboto
-    code: Fira Code   
-  icon:
-    repo: fontawesome/brands/github
-    logo: material/robot-industrial
+    - announce.dismiss 
   palette:
+    - scheme: slate
+      primary: indigo
+      accent: cyan
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
     - scheme: default
       primary: indigo
-      accent: amber
+      accent: cyan
       toggle:
-        icon: material/brightness-7
-        name: Dark Mode
-    - scheme: slate
-      primary: teal
-      accent: lime
-      toggle:
-        icon: material/brightness-4
-        name: Light Mode
+        icon: material/weather-night
+        name: Switch to dark mode
+  font:
+    text: Inter
+    code: JetBrains Mono
+  icon:
+    logo: material/rocket-launch
 
-nav:
-  - Jetson Custom Board: md/Jetson.md
-  - Raspberry Pi Custom Board: md/Raspberry.md
-  - Lectron Ari: md/LectronAri.md
-  - Lectron Ebabil: md/LectronEbabil.md
+plugins:
+  - search
 
 markdown_extensions:
-  - admonition                 # !!! info, warning vs
-  - pymdownx.details           # ??? collapsible bloklar
-  - pymdownx.superfences       # iç içe kod blokları
+  - admonition
+  - attr_list
+  - md_in_html
+  - toc:
+      permalink: true
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.inlinehilite
   - pymdownx.highlight:
       anchor_linenums: true
-      linenums: true           # kod bloklarında satır numarası
-  - pymdownx.inlinehilite      # satır içi kod vurgusu
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.tabbed:
       alternate_style: true    # tab’li içerik
   - pymdownx.tasklist:
       custom_checkbox: true    # [ ] / [x] checklist
-  - toc:
-      permalink: true          # başlıklarda # linki
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
+extra_css:
+  - stylesheets/extra.css
+
+extra_javascript:
+  - javascripts/extra.js
