--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,31 +13,24 @@ theme:
   name: material
   language: en
   custom_dir: docs/overrides
-  # features:
-  #   - navigation.tabs.sticky       # sekmeler sabit kalsın
-  #   - navigation.sections          # sidebar bölümleri
-  #   - navigation.top               # yukarı çık butonu
-  #   - navigation.tracking
-  #   - content.code.copy            # code-block copy
-  #   - content.code.annotate
-  #   - search.suggest
-  #   - search.highlight
-  #   - navigation.tabs
-  #   - navigation.expand       
-  #   - navigation.instant
-  #   - toc.integrate
-  #   - content.tabs.linked     
-  #   - header.autohide         
-  #   - announce.dismiss   
   features:
     - navigation.tabs
+    - navigation.tabs.sticky       # sekmeler sabit kalsın
+    - navigation.sections          # sidebar bölümleri
+    - navigation.top               # yukarı çık butonu
+    - navigation.tracking
     - navigation.expand       
     - navigation.instant
-    - navigation.sections     
+    - navigation.instant.prefetch
+    - navigation.instant.progress
+    - content.code.copy            # code-block copy
+    - content.code.annotate
+    - search.suggest
+    - search.highlight
     - toc.integrate
     - content.tabs.linked     
     - header.autohide         
-    - announce.dismiss 
+    - announce.dismiss   
   palette:
     - scheme: slate
       primary: indigo
